fix: icon alignment

--- a/src/components/Timeline/timeline.styles.css
+++ b/src/components/Timeline/timeline.styles.css
@@ -1,10 +1,11 @@
 .vertical-timeline{
     margin-bottom: 4em!important;
 }
-
+.vertical-timeline-element-content-arrow{
+    border-right: 7px solid white !important;
+}
 .vertical-timeline-element-icon{
     border-radius: 4;
-    position: relative;
     overflow: hidden;
     align-items: center;
     justify-content: center;
